# opencv

./: CMakeLists.txt  blur.cpp  canny.cpp  erode.cpp  main.cpp  resize.cpp  split.cpp
